libs/@local/hashql/ast/tests/ui/lower/expander/labeled-argument-input.jsonc
//@ run: fail
//@ description: labeled arguments are not allowed in `input`
[
  "::kernel::special_form::input",
  "x",
  "Integer",
  { ":extra": { "#literal": 0 } }
  //~^ ERROR labeled arguments are not allowed in `input`
]
